--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,7 +80,7 @@ import bg3 from "../assets/images/bg3.svg";
         <div class="w-[41%] box-border relative md:pl-10">
           <!-- Beerglass -->
           <div class="relative flex place-content-end pt-20 md:pt-8">
-            <Image src={beerglass1} alt="øl" class="w-52 md:w-96 h-auto md:pl-10" />
+            <Image src={beerglass1} alt="øl" class="w-52 md:w-96 h-auto" />
             <div class="absolute right-[22%] top-[74%] sm:top-[66%] sm:right-[20%] md:top-[69%] md:right-[19%] lg:top-[64%] lg:right-[17%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
               <Image src={gif} alt="GIF" class="w-4 sm:w-7 md:w-7 lg:w-9 h-auto" />
             </div>
@@ -173,9 +173,9 @@ import bg3 from "../assets/images/bg3.svg";
         <!-- Billede og GIF -->
         <div class="w-[41%] box-border relative md:pl-10">
           <!-- Beerglass -->
-          <div class="relative flex place-content-end pt-8">
-            <Image src={beerglass2} alt="øl" class="w-full md:w-96 h-auto" />
-            <div class="absolute right-[20%] top-[70%] sm:top-[64%] sm:right-[20%] md:top-[69%] md:right-[21%] lg:top-[65%] lg:right-[19%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
+          <div class="relative flex place-content-end pt-20 md:pt-8">
+            <Image src={beerglass2} alt="øl" class="w-52 md:w-96 h-auto" />
+            <div class="absolute right-[20%] top-[77%] sm:top-[64%] sm:right-[20%] md:top-[69%] md:right-[21%] lg:top-[65%] lg:right-[19%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
               <Image src={gif} alt="GIF" class="w-4 sm:w-6 md:w-7 lg:w-8 h-auto" />
             </div>
           </div>
