--- a/src/pages/betaling.astro
+++ b/src/pages/betaling.astro
@@ -93,7 +93,7 @@ import beer from "../assets/images/4_beer.png";
 
                 <!-- Submit knap -->
                 <div class="flex items-center pb-6 pt-4">
-                  <Button variant="primary" size="large" href="/betaling">GODKEND OG BETAL</Button>
+                  <Button variant="primary" size="large" href="/tak">GODKEND OG BETAL</Button>
                 </div>
               </form>
             </div>
