--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,11 +28,11 @@ import bg3 from "../assets/images/bg3.svg";
 ---
 
 <MainLayout title="Maltclub">
-  <section class="relative overflow-hidden">
+  <section class="relative">
     <h1 class="flex justify-center text-blue-500 text-xlarge md:text-3xlarge lg:text-5xlarge inview2">MALTCLUB</h1>
     <h3 class="flex justify-center text-blue-500 font-bold lg:pt-4 text-xsmall">DIN ØLFORHANDLER PÅ ABONNEMENT</h3>
 
-    <div class="relative z-20 flex justify-center px-4 sm:px-4 md:px-6 pt-4 lg:pt-7 lg:px-2 mx-auto">
+    <div class="relative z-20 flex justify-center px-4 sm:px-4 md:px-6 pt-4 lg:pt-7 lg:px-2 mx-auto overflow-hidden">
       <Image src={wildtiger} alt="billede" class="image-container beer-image w-14 sm:w-20 lg:w-44 slide-left beer-img" />
       <Image src={wa} alt="billede" class="image-container beer-image w-14 sm:w-20 lg:w-44 slide-left beer-img" />
       <Image src={wave} alt="billede" class="image-container beer-image w-14 sm:w-20 lg:w-44 slide-left beer-img" />
