--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,7 +67,7 @@ import bg3 from "../assets/images/bg3.svg";
     </div>
   </section>
 
-  <section class="relative h-screen md:min-h-screen flex flex-wrap overflow-hidden bg-pink">
+  <section class="relative h-[80vh] md:h-[110vh] flex flex-wrap overflow-hidden bg-pink">
     <!-- Baggrund -->
     <div class="absolute inset-0 z-0">
       <Image src={bg2} alt="Baggrund" class="w-full h-full md:object-cover object-center" />
@@ -77,7 +77,7 @@ import bg3 from "../assets/images/bg3.svg";
     <div class="relative z-10 flex w-full items-center md:items-end px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
       <div class="container pt-52 md:pt-0 box-border items-center md:w-full md:h-[80vh] mx-auto flex justify-center lg:items-center md:flex-wrap">
         <!-- Billede og GIF -->
-        <div class="w-[41%] box-border relative md:pl-10">
+        <div class="w-[48%] md:w-[41%] box-border relative md:pl-10">
           <!-- Beerglass -->
           <div class="relative flex place-content-end pt-8">
             <Image src={beerglass1} alt="øl" class="w-52 md:w-96 h-auto" />
@@ -171,7 +171,7 @@ import bg3 from "../assets/images/bg3.svg";
     <div class="relative z-20 flex w-full md:items-end px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
       <div class="container box-border items-center md:w-full md:h-[80vh] mx-auto flex justify-center lg:items-center md:flex-wrap">
         <!-- Billede og GIF -->
-        <div class="w-[41%] box-border relative md:pl-10">
+        <div class="w-[48%] md:w-[41%] box-border relative md:pl-10">
           <!-- Beerglass -->
           <div class="relative flex place-content-end pt-20 md:pt-8">
             <Image src={beerglass2} alt="øl" class="w-52 md:w-96 h-auto" />
