--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -20,21 +20,21 @@ import klat from "../assets/images/klat.svg";
 
     <section class="lg:flex lg:justify-center lg:gap-20 pt-20">
       <div class="font-bold mt-sm flex justify-center">
-        <Card navn="LYS BOKS" pris="200 DKK" cardimage="/4_beer.svg" cardimagealt="øl" tekst="Indeholder 4 håndplukkede 75cl lyse specialøl  - perfekt til nye smagsoplevelser hver måned." />
+        <Card navn="LYS BOKS" pris="200 DKK" cardimage="/4_beer.svg" cardimagealt="øl" tekst="Indeholder 4 håndplukkede 75cl lyse specialøl  - perfekt til nye smagsoplevelser hver måned." stjerner="★★★★★" />
       </div>
 
       <div class="font-bold mt-sm flex justify-center">
-        <Card navn="MØRK BOKS" pris="200 DKK" cardimage="/4_beer.svg" cardimagealt="øl" tekst="Indeholder 4 håndplukkede 75cl specialøl  - Til dig, der elsker fyldige og mørke smagsnuancer." />
+        <Card navn="MØRK BOKS" pris="200 DKK" cardimage="/4_beer.svg" cardimagealt="øl" tekst="Indeholder 4 håndplukkede 75cl specialøl  - Til dig, der elsker fyldige og mørke smagsnuancer." stjerner="★★★★" />
       </div>
     </section>
 
     <section class="lg:flex lg:justify-center gap-20">
       <div class="flex justify-center font-bold mt-sm">
-        <Card navn="A-FRI BOKS" pris="200 DKK" cardimage="/4_beer.svg" cardimagealt="øl" tekst="Indeholder 4 håndplukkede 75cl specialøl - Smagfuld oplevelse uden alkohol til alle lejligheder." />
+        <Card navn="ALKOHOLFRI BOKS" pris="200 DKK" cardimage="/4_beer.svg" cardimagealt="øl" tekst="Indeholder 4 håndplukkede 75cl specialøl - Smagfuld oplevelse uden alkohol til alle lejligheder." stjerner="★★★" />
       </div>
 
       <div class="font-bold mt-sm flex justify-center">
-        <Card navn="MIX BOKS" pris="275 DKK" cardimage="/5_beer.svg" cardimagealt="øl" tekst="5 håndplukkede 75cl øl - lyse, mørke og alkoholfrie. Perfekt til deling eller selvforkælelse." />
+        <Card navn="MIX BOKS" pris="275 DKK" cardimage="/5_beer.svg" cardimagealt="øl" tekst="5 håndplukkede 75cl øl - lyse, mørke og alkoholfrie. Perfekt til deling eller selvforkælelse." stjerner="★★★★" />
       </div>
     </section>
   </section>
