--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -184,7 +184,7 @@ import bg3 from "../assets/images/bg3.svg";
         <!-- Tekst -->
         <div class="w-[41%] pt-28 md:pt-14">
           <h3 class="font-bold md:text-small text-xsmall">GOLDEN TASTE</h3>
-          <p class="text-xs w-44 md:sw-2/3">Golden Taste er en perfekt afbalanceret øl, der kombinerer gyldne maltnoter med en frisk, frugtagtig aroma. En elegant smagsoplevelse, der forkæler dine sanser ved hver tår.</p>
+          <p class="text-xs md:text-body w-44 md:w-2/3">Golden Taste er en perfekt afbalanceret øl, der kombinerer gyldne maltnoter med en frisk, frugtagtig aroma. En elegant smagsoplevelse, der forkæler dine sanser ved hver tår.</p>
         </div>
       </div>
     </div>
