--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -118,28 +118,28 @@ import bg3 from "../assets/images/bg3.svg";
     </div>
 
     <div class="md:grid md:grid-cols-2 lg:grid-cols-4 gap-8 pt-7 md:pt-20">
-      <div class="w-72 min-h-full flex flex-col mx-auto items-center p-4">
+      <div class="w-72 min-h-full flex flex-col mx-auto items-center p-4 border-blue-500 border-2 shadow-drop50 rounded transform transition duration-400 ease-in-out hover:scale-105">
         <Image src={info1} alt="billede" class="w-28 h-24 mx-auto" />
-        <h3 class="text-xsmall font-bold text-blue-500 pt-4">BESTIL DIT MALTCLUB ØL ABONNMENT</h3>
-        <p class="text-blue-500 pt-2">Vælg hvilket øl abonnement du ønsker at modtage. Få leveret et lækkert udvalg af kvalitetsøl fra danske og udenlandske bryggerier direkte hjem til dig eller din nærmeste pakkeshop.</p>
+        <h3 class="text-xsmall font-bold text-blue-500 pt-4">BESTIL DIT ØL ABONNEMENT</h3>
+        <p class="text-blue-500 pt-2">Vælg dit øl-abonnement og få kvalitetsøl fra danske og udenlandske bryggerier leveret til døren eller din pakkeshop.</p>
       </div>
 
-      <div class="w-72 min-h-full flex flex-col mx-auto items-center p-4">
+      <div class="w-72 min-h-full flex flex-col mx-auto items-center p-4 border-blue-500 border-2 shadow-drop50 rounded transform transition duration-400 ease-in-out hover:scale-105">
         <Image src={info2} alt="billede" class="w-32 h-24 mx-auto" />
         <h3 class="text-xsmall font-bold text-blue-500 pt-4">NYD DINE ØL I GODT SELVSKAB</h3>
-        <p class="text-blue-500 pt-2">Inviter gode venner eller familie på besøg og byd på lækre specialøl. Med et MaltClub øl abonnement er du sikker på at kunne byde på gode øl til enhver lejlighed - med mindre du selvfølgelig har nået at drikke dine øl inden du får gæster på besøg.</p>
+        <p class="text-blue-500 pt-2">Inviter venner eller familie og nyd lækre specialøl - du har altid gode øl klar, medmindre du drikker dem før gæsterne kommer.</p>
       </div>
 
-      <div class="w-72 min-h-full flex flex-col mx-auto items-center p-4">
+      <div class="w-72 min-h-full flex flex-col mx-auto items-center p-4 border-blue-500 border-2 shadow-drop50 rounded transform transition duration-400 ease-in-out hover:scale-105">
         <Image src={info3} alt="billede" class="w-20 h-24 mx-auto" />
         <h3 class="text-xsmall font-bold text-blue-500 pt-4">UNIKKE OG SMAGSVÆKKENDE</h3>
-        <p class="text-blue-500 pt-2">MaltClub giver dig en kulinarisk smagsoplevelse med et udvalg af unikke specialøl. Samtidig sparer du tid og får adgang til varianter, som du måske aldrig ville opdage i dit lokale supermarked.</p>
+        <p class="text-blue-500 pt-2">MaltClub giver dig unikke smagsoplevelser og sparer dig tid med specialøl, du ikke finder i supermarkedet.</p>
       </div>
 
-      <div class="w-72 min-h-full flex flex-col mx-auto items-left p-4">
+      <div class="w-72 min-h-full flex flex-col mx-auto items-left p-4 border-blue-500 border-2 shadow-drop50 rounded transform transition duration-400 ease-in-out hover:scale-105">
         <Image src={info4} alt="billede" class="w-20 h-24 mx-auto" />
         <h3 class="text-xsmall font-bold text-blue-500 pt-4 text-left">SPAR TID OG PENGE</h3>
-        <p class="text-blue-500 pt-2">Hos MaltClub kombinerer vi smag og værdi, så du kan nyde unikke øl af høj kvalitet til billigere penge - uden at bruge tid på at lede efter dem.</p>
+        <p class="text-blue-500 pt-2">MaltClub kombinerer smag og værdi, så du kan nyde unikke øl af høj kvalitet til billigere penge - uden at bruge tid på at lede efter dem.</p>
       </div>
     </div>
   </section>
