--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -163,12 +163,12 @@ import beer5 from "../assets/images/5_beer.png";
 
   <section class="">
     <div class="py-24 bg-blue-500 md:flex md:justify-center md:gap-10">
-      <div class="w-1/2">
-        <h2 class="text-large text-grey-500">50% af vores medlemmer bestiller Mix Boks abonnementet</h2>
-        <p class="text-grey-500 pt-4 w-3/4">Oplev alsidigheden med vores Mix Boks abonnement, hvor du får 5 forskellige specialøl leveret direkte til døren. Boksen byder på en spændende blanding af lyse, mørke og alkoholfri øl, så der er noget for enhver smag. Med Mix Boks abonnementet får du ikke kun kvalitetsøl - du får også muligheden for at udvide din smagshorisont og opleve nye favoritter.</p>
+      <div class="text-center md:w-1/2 mx-auto pb-6">
+        <h2 class="text-medium md:text-large text-grey-500">50% af vores medlemmer bestiller Mix Boks abonnementet</h2>
+        <p class="mx-auto items-center text-grey-500 pt-4 w-3/4">Oplev alsidigheden med vores Mix Boks abonnement, hvor du får 5 forskellige specialøl leveret direkte til døren. Boksen byder på en spændende blanding af lyse, mørke og alkoholfri øl, så der er noget for enhver smag. Med Mix Boks abonnementet får du ikke kun kvalitetsøl - du får også muligheden for at udvide din smagshorisont og opleve nye favoritter.</p>
       </div>
-      <div class="py-10 bg-grey-500 rounded w-72 flex justify-center">
-        <Image src={info3} alt="billede" class="w-50" />
+      <div class="py-10 bg-grey-500 rounded w-72 md:flex md:justify-center mx-auto items-center">
+        <Image src={info3} alt="billede" class="w-50 mx-auto items-center" />
       </div>
     </div>
   </section>
