--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -12,6 +12,7 @@ import klat from "../assets/images/klat.svg";
       <div class="absolute top-0 left-0 right-0 bottom-0 flex justify-center items-center w-full h-full">
         <h2 class="text-blue-500 lg:text-2xlarge md:text-2xlarge text-small pt-22">DIN SMAGSREJSE STARTER HER</h2>
       </div>
+      <h3 class="text-xs sm:text-xsmall absolute top-12 left-0 right-0 bottom-0 flex justify-center items-center font-bold w-full h-full">KØB ABONNEMENT NU</h3>
     </div>
 
     <div class="flex justify-center">
