--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -9,7 +9,7 @@ import Button from "../components/Button.astro";
       <h3 class="text-small pt-6 font-semibold text-blue-500">{navn}</h3>
     </div>
     <div class="flex justify-center">
-      <p class="text-md font-light text-center text-blue-500">{pris}</p>
+      <p class="text-md font- text-center text-blue-500">{pris}</p>
     </div>
 
     <div class="flex justify-center pb-6">
