--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -35,7 +35,7 @@ import klat from "../assets/images/klat.svg";
       </div>
 
       <div class="font-bold mt-sm flex justify-center">
-        <Card navn="MIX BOKS" pris="275 DKK" cardimage="/5_beer.svg" cardimagealt="øl" tekst="5 håndplukkede 75cl øl - lyse, mørke og alkoholfrie. Perfekt til deling eller selvforkælelse." stjerner="★★★★" />
+        <Card navn="MIX BOKS" pris="275 DKK" cardimage="/5_beer.svg" cardimagealt="øl" tekst="5 håndplukkede 75cl øl - lyse, mørke og alkoholfrie. Perfekt til deling eller selvforkælelse." stjerner="★★★★★" />
       </div>
     </section>
   </section>
