--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -2,8 +2,9 @@
 const { variant = "primary", size = "medium", href = "#", target = "_self" } = Astro.props;
 
 const variantClasses = {
-  primary: " font-bold cursor-pointer text-grey-500 shadow-drop25 bg-blue-500 hover:bg-blue-400 rounded",
-  secondary: "font-bold cursor-pointer border-2 border-orange-500 text-orange-500  shadow-drop25 hover:border-grey-500 rounded hover:text-grey-500",
+  primary: "font-bold cursor-pointer border-blue-500 border-2 text-grey-500 shadow-drop25 bg-blue-500 hover:bg-blue-400 hover:border-blue-400 rounded",
+  secondary: "font-bold cursor-pointer border-2 border-orange-600 text-orange-600  shadow-drop25 hover:border-grey-500 rounded hover:text-grey-500",
+  tertiary: "font-bold cursor-pointer border-2 border-blue-500 text-blue-500 shadow-drop25 hover:bg-blue-500 hover:text-grey-500 rounded",
 };
 
 const sizeClasses = {
