--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -19,6 +19,11 @@ const { title } = Astro.props;
     <title>{Astro.props.title}</title>
   </head>
   <body class="bg-grey-500 scroll-smooth">
+    <script>
+      if (!localStorage.getItem("loggedIn")) {
+        window.location.href = "/login";
+      }
+    </script>
     <header>
       <Header />
     </header>
