--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,8 +90,8 @@ import beer5 from "../assets/images/5_beer.png";
 
         <!-- Tekst -->
         <div class="w-1/2 md:w-[41%] pt-14">
-          <h3 class="font-bold md:text-small text-xsmall">Smag vores Nyhed!</h3>
-          <p class="w-44 md:w-2/3 text-xs md:text-body">Vores yngste medlem. En alkoholfri tørslukker med dybde og lækre toner af skovbær. Nyd den kold - skål!</p>
+          <h3 class="font-bold md:text-small text-xsmall text-blue-500">Smag vores Nyhed!</h3>
+          <p class="w-44 md:w-2/3 text-xs md:text-body text-blue-500">Vores nyeste medlem. En lækker alkoholfri øl med dybde og lækre toner af skovbær. Nyd den kold - skål!</p>
         </div>
       </div>
     </div>
@@ -99,11 +99,11 @@ import beer5 from "../assets/images/5_beer.png";
 
   <section class="bg-blue-500 py-28">
     <div class="px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
-      <h3 class="text-grey-500 text-center flex justify-center md:pl-7 lg:text-medium md:text-small text-xsmall">Tilmeld dig vores nyhedsbrev og spar 20% på første måned</h3>
-      <p class="text-xs text-center md:text-body flex justify-center text-grey-500 pt-4 pl-7">Hop med på bølgen og start dit øl-eventyr med 20% rabat i første måned!</p>
+      <h3 class="text-grey-500 text-center flex justify-center md:pl-7 lg:text-medium md:text-small font-bold text-xsmall">Tilmeld dig vores nyhedsbrev og spar 20% på første måned</h3>
+      <p class="text-xs text-center md:text-body flex justify-center text-grey-500 font-bold pt-4 pl-7">Hop med på bølgen og start dit øl-eventyr med 20% rabat i første måned!</p>
 
       <form class="flex flex-col items-center space-y-4 w-full max-w-sm mx-auto pt-4">
-        <input type="email" placeholder="Indtast din e-mail" class="w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required />
+        <input type="email" placeholder="Indtast din e-mail" class="w-full px-4 py-2 border border-blue-500 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required />
         <Button variant="secondary" size="medium" href="/your-link">TILMELD</Button>
       </form>
     </div>
@@ -121,25 +121,38 @@ import beer5 from "../assets/images/5_beer.png";
     <div class="md:grid md:grid-cols-2 lg:grid-cols-4 gap-8 pt-7 md:pt-12">
       <div class="w-72 min-h-full flex flex-col mx-auto items-center p-4 mb-6 border-blue-500 border-2 shadow-drop50 rounded transform transition duration-400 ease-in-out hover:scale-105">
         <Image src={info1} alt="billede" class="w-28 h-24 mx-auto" />
-        <h3 class="text-xsmall font-bold text-blue-500 pt-4">BESTIL DIT ØL ABONNEMENT</h3>
+        <h3 class="text-xsmall font-bold text-blue-500 pt-4">1. BESTIL DIT ØL ABONNEMENT</h3>
         <p class="text-blue-500 pt-2">Vælg dit øl-abonnement og få kvalitetsøl fra danske og udenlandske bryggerier leveret til døren eller din pakkeshop.</p>
       </div>
       <div class="w-72 min-h-full flex flex-col mx-auto items-center p-4 mb-6 border-blue-500 border-2 shadow-drop50 rounded transform transition duration-400 ease-in-out hover:scale-105">
         <Image src={info2} alt="billede" class="w-32 h-24 mx-auto" />
-        <h3 class="text-xsmall font-bold text-blue-500 pt-4">NYD DINE ØL I GODT SELVSKAB</h3>
+        <h3 class="text-xsmall font-bold text-blue-500 pt-4">2. NYD DEM I GODT SELVSKAB</h3>
         <p class="text-blue-500 pt-2">Inviter venner eller familie og nyd lækre specialøl - du har altid gode øl klar, medmindre du drikker dem før gæsterne kommer.</p>
       </div>
 
       <div class="w-72 min-h-full flex flex-col mx-auto items-center p-4 mb-6 border-blue-500 border-2 shadow-drop50 rounded transform transition duration-400 ease-in-out hover:scale-105">
         <Image src={info3} alt="billede" class="w-20 h-24 mx-auto" />
-        <h3 class="text-xsmall font-bold text-blue-500 pt-4">UNIKKE OG SMAGSVÆKKENDE</h3>
+        <h3 class="text-xsmall font-bold text-blue-500 pt-4">3. UNIK OG SMAGSVÆKKENDE</h3>
         <p class="text-blue-500 pt-2">MaltClub giver dig unikke smagsoplevelser og sparer dig tid med specialøl, du ikke finder i supermarkedet.</p>
       </div>
 
       <div class="w-72 min-h-full flex flex-col mx-auto items-left p-4 border-blue-500 border-2 shadow-drop50 rounded transform transition duration-400 ease-in-out hover:scale-105">
         <Image src={info4} alt="billede" class="w-20 h-24 mx-auto" />
-        <h3 class="text-xsmall font-bold text-blue-500 pt-4 text-left">SPAR TID OG PENGE</h3>
-        <p class="text-blue-500 pt-2">MaltClub kombinerer smag og værdi, så du kan nyde unikke øl af høj kvalitet til billigere penge - uden at bruge tid på at lede efter dem.</p>
+        <h3 class="text-xsmall font-bold text-blue-500 pt-4 text-left">4.SPAR TID OG PENGE</h3>
+        <p class="text-blue-500 pt-2">Vi kombinerer smag og værdi, så du kan nyde unikke øl af høj kvalitet til billigere penge - uden at bruge tid på at lede efter dem.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="pt-36">
+    <div class="py-24 bg-blue-500 md:flex md:justify-center md:gap-10">
+      <div class="text-center md:w-1/2 mx-auto pb-6">
+        <h2 class="text-medium md:text-large text-grey-500">50% af vores medlemmer bestiller Mix Boks abonnementet</h2>
+        <p class="mx-auto items-center text-grey-500 pt-4 w-4/5">Oplev alsidigheden med vores Mix Boks abonnement: 5 unikke specialøl leveret til døren. Nyd en blanding af lyse, mørke og alkoholfri øl, der passer til enhver smag. Udvid din smagshorisont og find nye favoritter!</p>
+        <p class="text-grey-500 pt-4 font-bold">Trustpilot <span>★★★★★</span></p>
+      </div>
+      <div class="py-10 bg-grey-500 rounded w-72 md:flex md:justify-center mx-auto items-center">
+        <Image src={info3} alt="billede" class="w-50 mx-auto items-center" />
       </div>
     </div>
   </section>
@@ -157,19 +170,6 @@ import beer5 from "../assets/images/5_beer.png";
         <div class="flex justify-center pt-6">
           <Button variant="primary" size="medium" href="/abonnement">KØB ABONNEMENT</Button>
         </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="">
-    <div class="py-24 bg-blue-500 md:flex md:justify-center md:gap-10">
-      <div class="text-center md:w-1/2 mx-auto pb-6">
-        <h2 class="text-medium md:text-large text-grey-500">50% af vores medlemmer bestiller Mix Boks abonnementet</h2>
-        <p class="mx-auto items-center text-grey-500 pt-4 w-4/5">Oplev alsidigheden med vores Mix Boks abonnement, hvor du får 5 forskellige specialøl leveret direkte til døren. Boksen byder på en spændende blanding af lyse, mørke og alkoholfri øl, så der er noget for enhver smag. Med Mix Boks abonnementet får du ikke kun kvalitetsøl - du får også muligheden for at udvide din smagshorisont og opleve nye favoritter.</p>
-        <p class="text-grey-500 pt-4 font-bold">Trustpilot <span>★★★★★</span></p>
-      </div>
-      <div class="py-10 bg-grey-500 rounded w-72 md:flex md:justify-center mx-auto items-center">
-        <Image src={info3} alt="billede" class="w-50 mx-auto items-center" />
       </div>
     </div>
   </section>
@@ -196,8 +196,8 @@ import beer5 from "../assets/images/5_beer.png";
 
         <!-- Tekst -->
         <div class="w-[41%] pt-28 md:pt-14">
-          <h3 class="font-bold md:text-small text-xsmall">GOLDEN TASTE</h3>
-          <p class="text-xs md:text-body w-44 md:w-2/3">Golden Taste er en perfekt afbalanceret øl, der kombinerer gyldne maltnoter med en frisk, frugtagtig aroma. En elegant smagsoplevelse, der forkæler dine sanser ved hver tår.</p>
+          <h3 class="font-bold md:text-small text-xsmall text-blue-500">GOLDEN TASTE</h3>
+          <p class="text-xs md:text-body w-44 md:w-2/3 text-blue-500">Golden Taste er en perfekt afbalanceret øl, der kombinerer gyldne maltnoter med en frisk, frugtagtig aroma. En elegant smagsoplevelse, der forkæler dine sanser ved hver tår.</p>
         </div>
       </div>
     </div>
@@ -218,7 +218,7 @@ import beer5 from "../assets/images/5_beer.png";
         <!-- Knapper -->
         <div class="flex flex-col sm:flex-row justify-center items-center gap-4">
           <Button variant="primary" size="medium" href="/abonnement">KØB ABONNEMENT</Button>
-          <Button variant="secondary" size="medium" href="/your-link">OPSIG ABONNEMENT</Button>
+          <Button variant="tertiary" size="medium" href="/your-link">OPSIG ABONNEMENT</Button>
         </div>
       </div>
     </div>
