--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -16,10 +16,10 @@ import Button from "../components/Button.astro";
       <img src={cardimage} alt={cardimagealt} class="w-40 lg:w-72" />
     </div>
     <div class="flex justify-center">
-      <p class="text-sm text-center font-normal text-blue-500 w-52 lg:w-80">{tekst}</p>
+      <p class="text-sm text-center font-bold text-blue-500 w-52 lg:w-80">{tekst}</p>
     </div>
 
-    <div class="flex justify-center text-xs text-grey-900 mt-4 font-light w-40 lg:w-96 mx-auto">
+    <div class="flex justify-center text-xs text-grey-900 mt-4 font-normal w-40 lg:w-96 mx-auto">
       <p class="pr-1 text-xs text-blue-500">Fri fragt inkluderet</p>
       <span class="px-1 text-xs text-blue-500">|</span>
       <p class="pr-1 text-xs text-blue-500">Månedligt abonnement</p>
