--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -145,7 +145,7 @@ import beer5 from "../assets/images/5_beer.png";
   </section>
 
   <section class="pt-36">
-    <div class="py-24 bg-blue-500 md:flex md:justify-center md:gap-10">
+    <div class="py-24 bg-blue-500 md:flex md:justify-center place-content-center">
       <div class="text-center md:w-1/2 mx-auto pb-6">
         <h2 class="text-medium md:text-large text-grey-500">50% af vores medlemmer bestiller Mix Boks abonnementet</h2>
         <p class="mx-auto items-center text-grey-500 pt-4 w-4/5">Oplev alsidigheden med vores Mix Boks abonnement: 5 unikke specialøl leveret til døren. Nyd en blanding af lyse, mørke og alkoholfri øl, der passer til enhver smag. Udvid din smagshorisont og find nye favoritter!</p>
@@ -212,7 +212,7 @@ import beer5 from "../assets/images/5_beer.png";
           <h3 class="lg:text-medium md:text-small text-small font-bold text-blue-500">
             FLEKSIBILITET PÅ <br /> DINE PRÆMISSER
           </h3>
-          <p class="lg:w-2/5 text-blue-500">Hos Maltclub gør vi det nemt for dig. Opret dit abonnement på få minutter, og nyd dine specialøl uden bekymringer. Har du brug for en pause? Opsig dit abonnement lige så nemt, som du oprettede det - helt uden bøvl.</p>
+          <p class="lg:w-3/6 text-blue-500">Hos Maltclub gør vi det nemt for dig. Opret dit abonnement på få minutter, og nyd dine specialøl uden bekymringer. Har du brug for en pause? Opsig dit abonnement lige så nemt, som du oprettede det - helt uden bøvl.</p>
         </div>
 
         <!-- Knapper -->
