--- a/src/pages/registering.astro
+++ b/src/pages/registering.astro
@@ -32,6 +32,11 @@ import beer from "../assets/images/4_beer.png";
     </ul>
   </div>
 
+  <a href="/abonnement">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6 relative left-[10%] cursor-pointer hover:stroke-orange-500">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18"></path>
+    </svg>
+  </a>
   <div class="flex justify-center md:items-start md:pt-20">
     <div class="w-full max-w-sm md:max-w-5xl">
       <div class="flex">
