--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,8 +55,8 @@ import beer5 from "../assets/images/5_beer.png";
     <div class="md:grid md:grid-cols-[1fr_auto] gap-6">
       <div class="md:w-4/5 md::flex md::flex-col md:place-content-center">
         <h3 class="lg:text-small text-xsmall font-bold text-blue-500">GØR HVER MÅNED TIL EN SMAGSREJSE!</h3>
-        <p class="text-blue-500 pt-3 md:pt-7">Vælg et øl abonnement, der passer til dig, og oplev nye håndplukkede specialøl, som du ikke finder andre steder kun et klik væk.</p>
-        <p class="text-blue-500 pb-10 pt-4">Find din favorit i dag og gør hver måned til noget særligt!</p>
+        <p class="text-blue-500 pt-3 md:pt-4">Vælg et øl abonnement, der passer til dig, og oplev nye håndplukkede specialøl, som du ikke finder andre steder kun et klik væk.</p>
+        <p class="text-blue-500 pb-10 pt-2">Find din favorit i dag og gør hver måned til noget særligt!</p>
         <div class="pb-9">
           <Button variant="primary" size="medium" href="/abonnement">KØB ABONNEMENT</Button>
         </div>
@@ -91,7 +91,7 @@ import beer5 from "../assets/images/5_beer.png";
         <!-- Tekst -->
         <div class="w-1/2 md:w-[41%] pt-14">
           <h3 class="font-bold md:text-small text-xsmall text-blue-500">Smag vores Nyhed!</h3>
-          <p class="w-44 md:w-2/3 text-xs md:text-body text-blue-500">Vores nyeste medlem. En lækker alkoholfri øl med dybde og lækre toner af skovbær. Nyd den kold - skål!</p>
+          <p class="w-44 md:w-2/3 text-xs md:text-body pt-2 text-blue-500">Vores nyeste medlem. En lækker alkoholfri øl med dybde og lækre toner af skovbær. Nyd den kold - skål!</p>
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@ import beer5 from "../assets/images/5_beer.png";
   <section class="bg-blue-500 py-28">
     <div class="px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
       <h3 class="text-grey-500 text-center flex justify-center md:pl-7 lg:text-medium md:text-small font-bold text-xsmall">Tilmeld dig vores nyhedsbrev og spar 20% på første måned</h3>
-      <p class="text-xs text-center md:text-body flex justify-center text-grey-500 font-bold pt-4 pl-7">Hop med på bølgen og start dit øl-eventyr med 20% rabat i første måned!</p>
+      <p class="text-xs text-center md:text-body flex justify-center text-grey-500 pt-4 pl-7">Hop med på bølgen og start dit øl-eventyr med 20% rabat i første måned!</p>
 
       <form class="flex flex-col items-center space-y-4 w-full max-w-sm mx-auto pt-4">
         <input type="email" placeholder="Indtast din e-mail" class="w-full px-4 py-2 border border-blue-500 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required />
@@ -138,7 +138,7 @@ import beer5 from "../assets/images/5_beer.png";
 
       <div class="w-72 min-h-full flex flex-col mx-auto items-left p-4 border-blue-500 border-2 shadow-drop50 rounded transform transition duration-400 ease-in-out hover:scale-105">
         <Image src={info4} alt="billede" class="w-20 h-24 mx-auto" />
-        <h3 class="text-xsmall font-bold text-blue-500 pt-4 text-left">4.SPAR TID OG PENGE</h3>
+        <h3 class="text-xsmall font-bold text-blue-500 pt-4 text-left">4. SPAR TID OG PENGE</h3>
         <p class="text-blue-500 pt-2">Vi kombinerer smag og værdi, så du kan nyde unikke øl af høj kvalitet til billigere penge - uden at bruge tid på at lede efter dem.</p>
       </div>
     </div>
@@ -148,7 +148,7 @@ import beer5 from "../assets/images/5_beer.png";
     <div class="py-24 bg-blue-500 md:flex md:justify-center place-content-center">
       <div class="text-center md:w-1/2 mx-auto pb-6">
         <h2 class="text-medium md:text-large text-grey-500">50% af vores medlemmer bestiller Mix Boks abonnementet</h2>
-        <p class="mx-auto items-center text-grey-500 pt-4 w-4/5">Oplev alsidigheden med vores Mix Boks abonnement: 5 unikke specialøl leveret til døren. Nyd en blanding af lyse, mørke og alkoholfri øl, der passer til enhver smag. Udvid din smagshorisont og find nye favoritter!</p>
+        <p class="mx-auto items-center text-grey-500 pt-4 w-4/5">Oplev alsidigheden med vores Mix Boks abonnement: 5 unikke specialøl leveret til døren. Nyd en blanding af lyse, mørke og alkoholfri øl, der passer til enhver smag. Udvid din smagshorisont og find nye favoritter idag!</p>
         <p class="text-grey-500 pt-4 font-bold">Trustpilot <span>★★★★★</span></p>
       </div>
       <div class="py-10 bg-grey-500 rounded w-72 md:flex md:justify-center mx-auto items-center">
@@ -197,7 +197,7 @@ import beer5 from "../assets/images/5_beer.png";
         <!-- Tekst -->
         <div class="w-[41%] pt-28 md:pt-14">
           <h3 class="font-bold md:text-small text-xsmall text-blue-500">GOLDEN TASTE</h3>
-          <p class="text-xs md:text-body w-44 md:w-2/3 text-blue-500">Golden Taste er en perfekt afbalanceret øl, der kombinerer gyldne maltnoter med en frisk, frugtagtig aroma. En elegant smagsoplevelse, der forkæler dine sanser ved hver tår.</p>
+          <p class="text-xs md:text-body w-44 md:w-2/3 pt-2 text-blue-500">Golden Taste er en perfekt afbalanceret øl, der kombinerer gyldne maltnoter med en frisk, frugtagtig aroma. En elegant smagsoplevelse, der forkæler dine sanser ved hver tår.</p>
         </div>
       </div>
     </div>
