--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -114,7 +114,7 @@ import beer5 from "../assets/images/5_beer.png";
       <Image src={klat} alt="billede" class="w-4/5 md:pt-32 sm:w-4/5 lg:pt-3 m-auto lg:w-3/6" />
       <div class="absolute md:top-12 lg:top-0 top-15 left-0 right-0 bottom-0 flex flex-col justify-center items-center w-full h-full">
         <h2 class="text-blue-500 lg:text-4xlarge md:text-2xlarge text-large md:pt-22">DINE FORDELE</h2>
-        <h2 class="text-blue-500">VED ET MALTCLUB ABONNEMENT</h2>
+        <h2 class="text-blue-500 md:text-small">VED ET MALTCLUB ABONNEMENT</h2>
       </div>
     </div>
 
