--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,8 +62,8 @@ import beer5 from "../assets/images/5_beer.png";
         </div>
       </div>
 
-      <div class="bg-rosa-500 h-80 w-70 md:w-96 md:h-80 lg:pt-4 rounded flex justify-center items-center">
-        <a href="/abonnement"> <Image src={boks} alt="billede" class="w-64 md:w-80 custom-pulse" /></a>
+      <div class="bg-rosa-500 h-50 w-40 md:w-96 md:h-80 lg:pt-4 rounded flex justify-center items-center">
+        <a href="/abonnement"> <Image src={boks} alt="billede" class="w-40 md:w-80 custom-pulse" /></a>
       </div>
     </div>
   </section>
@@ -147,18 +147,18 @@ import beer5 from "../assets/images/5_beer.png";
   <section class="pt-36">
     <div class="py-24 bg-blue-500 md:flex md:justify-center place-content-center">
       <div class="text-center md:w-1/2 mx-auto pb-6">
-        <h2 class="text-medium md:text-large text-grey-500">50% af vores medlemmer bestiller Mix Boks abonnementet</h2>
+        <h2 class="text-small w-96 mx-auto sm:text-medium md:text-large text-grey-500">50% af vores medlemmer bestiller Mix Boks abonnementet</h2>
         <p class="mx-auto items-center text-grey-500 pt-4 w-4/5">Oplev alsidigheden med vores Mix Boks abonnement: 5 unikke specialøl leveret til døren. Nyd en blanding af lyse, mørke og alkoholfri øl, der passer til enhver smag. Udvid din smagshorisont og find nye favoritter idag!</p>
         <p class="text-grey-500 pt-4 font-bold">Trustpilot <span>★★★★★</span></p>
       </div>
-      <div class="py-10 bg-grey-500 rounded w-72 md:flex md:justify-center mx-auto items-center">
-        <Image src={info3} alt="billede" class="w-50 mx-auto items-center" />
+      <div class="py-10 bg-grey-500 rounded w-52 md:w-72 md:flex md:justify-center mx-auto items-center">
+        <Image src={info3} alt="billede" class="w-20 md:w-50 mx-auto items-center" />
       </div>
     </div>
   </section>
 
   <section class="overflow-hidden">
-    <Image src={car} alt="Baggrund" class="w-64 md:w-auto pt-20 lg:w-auto bilinview" />
+    <Image src={car} alt="Baggrund" class="w-80 md:w-auto pt-20 lg:w-auto pl-20 bilinview" />
 
     <div class="bg-rosa-500 py-32 pl-4">
       <div class="px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
