--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,6 +26,7 @@ import bg from "../assets/images/bg.svg";
 import bg2 from "../assets/images/bg2.svg";
 import bg3 from "../assets/images/bg3.svg";
 import beer5 from "../assets/images/5_beer.png";
+import gifi from "../assets/images/gifi.gif";
 ---
 
 <MainLayout title="Maltclub">
@@ -82,8 +83,8 @@ import beer5 from "../assets/images/5_beer.png";
           <!-- Beerglass -->
           <div class="relative flex place-content-end pt-8">
             <Image src={beerglass1} alt="øl" class="w-52 md:w-96 h-auto" />
-            <div class="absolute right-[22%] top-[74%] sm:top-[66%] sm:right-[20%] md:top-[69%] md:right-[19%] lg:top-[64%] lg:right-[-10%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
-              <Image src={gif} alt="GIF" class="w-4 sm:w-7 md:w-7 lg:w-32 h-auto" />
+            <div class="absolute right-[22%] top-[74%] sm:top-[66%] sm:right-[20%] md:top-[69%] md:right-[19%] lg:top-[64%] lg:right-[15%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
+              <Image src={gifi} alt="GIF" class="w-4 sm:w-7 md:w-7 lg:w-20 h-auto" />
             </div>
           </div>
         </div>
