--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -190,7 +190,7 @@ import gifi from "../assets/images/gifi.gif";
           <div class="relative flex place-content-end pt-20 md:pt-8">
             <Image src={beerglass2} alt="øl" class="w-52 md:w-96 h-auto" />
             <div class="absolute right-[20%] top-[77%] sm:top-[64%] sm:right-[20%] md:top-[69%] md:right-[21%] lg:top-[65%] lg:right-[19%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
-              <Image src={gif} alt="GIF" class="w-4 sm:w-6 md:w-7 lg:w-8 h-auto" />
+              <Image src={gifi} alt="GIF" class="w-4 sm:w-6 md:w-7 lg:w-8 h-auto" />
             </div>
           </div>
         </div>
