--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,6 @@ import info3 from "../assets/images/INFO3.svg";
 import info4 from "../assets/images/INFO4.svg";
 import car from "../assets/images/beer_car.png";
 import klat from "../assets/images/klat.svg";
-import gif from "../assets/images/bubbles.gif";
 import bg from "../assets/images/bg.svg";
 import bg2 from "../assets/images/bg2.svg";
 import bg3 from "../assets/images/bg3.svg";
@@ -83,8 +82,8 @@ import gifi from "../assets/images/gifi.gif";
           <!-- Beerglass -->
           <div class="relative flex place-content-end pt-8">
             <Image src={beerglass1} alt="øl" class="w-52 md:w-96 h-auto" />
-            <div class="absolute right-[22%] top-[74%] sm:top-[66%] sm:right-[20%] md:top-[69%] md:right-[19%] lg:top-[64%] lg:right-[15%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
-              <Image src={gifi} alt="GIF" class="w-4 sm:w-7 md:w-7 lg:w-20 h-auto" />
+            <div class="absolute right-[12%] top-[62%] sm:top-[62%] sm:right-[9%] md:top-[64%] md:right-[9%] lg:top-[64%] lg:right-[7%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
+              <Image src={gifi} alt="GIF" class="w-10 sm:w-10 md:w-16 lg:w-24 h-auto" />
             </div>
           </div>
         </div>
@@ -153,7 +152,7 @@ import gifi from "../assets/images/gifi.gif";
         <p class="text-grey-500 pt-4 font-bold">Trustpilot <span>★★★★★</span></p>
       </div>
       <div class="py-10 bg-grey-500 rounded w-52 md:w-72 md:flex md:justify-center mx-auto items-center">
-        <Image src={info3} alt="billede" class="w-20 md:w-50 mx-auto items-center" />
+        <Image src={info3} alt="billede" class="w-20 sm:w-36 md:w-50 lg:w-52 mx-auto items-center" />
       </div>
     </div>
   </section>
@@ -189,8 +188,8 @@ import gifi from "../assets/images/gifi.gif";
           <!-- Beerglass -->
           <div class="relative flex place-content-end pt-20 md:pt-8">
             <Image src={beerglass2} alt="øl" class="w-52 md:w-96 h-auto" />
-            <div class="absolute right-[20%] top-[77%] sm:top-[64%] sm:right-[20%] md:top-[69%] md:right-[21%] lg:top-[65%] lg:right-[19%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
-              <Image src={gifi} alt="GIF" class="w-4 sm:w-6 md:w-7 lg:w-8 h-auto" />
+            <div class="absolute right-[8%] top-[73%] sm:top-[72%] sm:right-[7%] md:top-[69%] md:right-[9%] lg:top-[65%] lg:right-[9%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
+              <Image src={gifi} alt="GIF" class="w-12 sm:w-12 md:w-16 lg:w-20 h-auto" />
             </div>
           </div>
         </div>
