--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,7 @@ import gifi from "../assets/images/gifi.gif";
     <div class="md:grid md:grid-cols-[1fr_auto] gap-6">
       <div class="md:w-4/5 md::flex md::flex-col md:place-content-center">
         <h3 class="lg:text-small text-xsmall font-bold text-blue-500">GØR HVER MÅNED TIL EN SMAGSREJSE!</h3>
-        <p class="text-blue-500 pt-3 md:pt-4">Vælg et øl abonnement, der passer til dig, og oplev nye håndplukkede specialøl, som du ikke finder andre steder kun et klik væk.</p>
+        <p class="text-blue-500 w-96 pt-3 md:pt-4">Vælg et øl abonnement, der passer til dig, og oplev nye håndplukkede specialøl, som du ikke finder andre steder kun et klik væk.</p>
         <p class="text-blue-500 pb-10 pt-2">Find din favorit i dag og gør hver måned til noget særligt!</p>
         <div class="pb-9">
           <Button variant="primary" size="medium" href="/abonnement">KØB ABONNEMENT</Button>
@@ -78,20 +78,20 @@ import gifi from "../assets/images/gifi.gif";
       </div>
 
       <div class="bg-rosa-500 h-50 w-40 md:w-96 md:h-80 lg:pt-4 rounded flex justify-center items-center">
-        <a href="/abonnement"> <Image src={boks} alt="billede" class="w-40 md:w-80 custom-pulse" /></a>
+        <a href="/abonnement"> <Image src={boks} alt="billede" class="w-56 md:w-80 custom-pulse" /></a>
       </div>
     </div>
   </section>
 
-  <section class="relative h-[80vh] md:h-[110vh] flex flex-wrap overflow-hidden bg-pink">
+  <section class="relative h-[80vh] lg:h-[110vh] flex flex-wrap overflow-hidden bg-pink">
     <!-- Baggrund -->
     <div class="absolute inset-0 z-0">
-      <Image src={bg2} alt="Baggrund" class="w-full h-full md:object-cover object-center" />
+      <Image src={bg2} alt="Baggrund" class="w-full h-full lg:object-cover object-center" />
     </div>
 
     <!-- Indhold -->
     <div class="relative z-10 flex w-full items-center md:items-end px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
-      <div class="container pt-52 md:pt-0 box-border items-center md:w-full md:h-[80vh] mx-auto flex justify-center lg:items-center md:flex-wrap">
+      <div class="container pt-52 md:pt-0 box-border items-center md:w-full lg:h-[80vh] mx-auto flex justify-center lg:items-center md:flex-wrap">
         <!-- Billede og GIF -->
         <div class="w-[48%] md:w-[41%] box-border relative md:pl-10">
           <!-- Beerglass -->
