--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import gifi from "../assets/images/gifi.gif";
 
 <MainLayout title="Maltclub">
   <!-- Pop-up -->
-  <div id="newsletterPopup" class="fixed inset-0 flex items-center text-blue-500 justify-center bg-black bg-opacity-50 hidden z-30">
+  <div id="newsletterPopup" class="fixed inset-0 flex items-center text-blue-500 justify-center bg-black bg-opacity-50 overflow-hidden z-30">
     <div class="bg-blue-500 p-10 rounded-lg shadow-lg max-w-sm w-full relative">
       <!-- Luk-knap -->
       <button id="closePopup" class="absolute top-3 right-3 text-grey-500 hover:text-grey-700 text-2xl font-bold"> &times; </button>
