--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -31,7 +31,7 @@ import klat from "../assets/images/klat.svg";
 
     <section class="lg:flex lg:justify-center gap-20">
       <div class="flex justify-center font-bold mt-sm">
-        <Card navn="ALKOHOLFRI BOKS" pris="200 DKK" cardimage="/4_beer.svg" cardimagealt="øl" tekst="Indeholder 4 håndplukkede 75cl specialøl - Smagfuld oplevelse uden alkohol til alle lejligheder." stjerner="★★★" />
+        <Card navn="ALKOHOLFRI BOKS" pris="200 DKK" cardimage="/4_beer.svg" cardimagealt="øl" tekst="Indeholder 4 lækre 75cl specialøl - Smagfuld oplevelse uden alkohol til alle lejligheder." stjerner="★★★" />
       </div>
 
       <div class="font-bold mt-sm flex justify-center">
